--- a/KafkaInConsoleAPp/KafkaInConsoleAPp/KafkaInConsoleAPp.csproj
+++ b/KafkaInConsoleAPp/KafkaInConsoleAPp/KafkaInConsoleAPp.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.9.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
