--- a/KafkaInConsoleAPp/KafkaInConsoleAPp/KafkaInConsoleAPp.csproj
+++ b/KafkaInConsoleAPp/KafkaInConsoleAPp/KafkaInConsoleAPp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="1.9.3" />
+    <PackageReference Include="kafka-sharp" Version="1.4.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
   </ItemGroup>
